data/all_generated_tests/raw_wast_tests/call_ImproperFunctionCallorReturnHandling_3672.wast
;; 1. **Test Invalid Function Indexing**:    - Execute a `call` instruction with an out-of-bounds function index. This checks if the implementation correctly handles out-of-bounds indices and generates a trap.    - **Constraint**: Ensures proper bounds checking for function indices.    - **Improper Call Handling**: Incorrect handling could call undefined functions or avoid generating a trap.

(assert_invalid
  (module
    (func (call 999999))
  )
  "unknown function"
)